--- a/picture.html
+++ b/picture.html
@@ -17,7 +17,7 @@
   <a href="https://fb.com/kkkad"><img src="https://fb.com/edeadedeij.png"></a>                <--using image as link and image from another website-->
   
   <a href="https://fb.com/kkkad"><img src="images/myfood.jpg" width="400" height="300"></a>   <--using image as link and image from web local folder-->
-  <a href="https://fb.com/kkkad"><img src="images/mydrink.jpg" alt="My Drinks"></a>           <--using image as link and image from web local folder-->
+  <a href="https://fb.com/kkkad"><img src="images/mydrink.png" alt="My Drinks"></a>           <--using image as link and image from web local folder-->
   <a href="https://fb.com/kkkad"><img src="images/cart.jpg"></a>                              <--using image as link and image from web local folder-->
 
 </body>
